code style adjustments